--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.1",
     "react-scripts": "^1.0.14",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2"
   },
   "scripts": {
